@@ -1,3 +1,14 @@
+Sun Jul 10 22:50:00 2011  Kenta Murata  <mrkn@mrkn.jp>
+
+	* ext/bigdecimal/bigdecimal.c (rmpd_power_by_big_decimal): fix
+	  precision treatment errors.
+
+	* test/bigdecimal/test_bigdecimal.rb: add tests for the above change.
+	  fix precision treatment errors.
+
+	* ext/bigdecimal/bigdecimal.c (BigDecimal_power): precision argument
+	  should be optional for its compatibility.
+
 Sun Jul 10 22:38:09 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* parse.y (var_ref): distinguish vcall from local variable
